# codelite

./: .gitignore  AGENTS.md  Memory.md  README.md  agent.md  pyproject.toml  soul.md  tool.md  user.md
.skills/manual-market-demo-1.2.0/: SKILL.md
codelite/: __init__.py  cli.py
codelite/config/: __init__.py  loader.py  runtime.yaml
codelite/core/: __init__.py  action_verify.py  agent_team.py  auto_orchestrator.py  context.py  delivery.py  events.py  failure_trace.py  heartbeat.py  lanes.py  llm.py  loop.py  mcp_runtime.py  memory_runtime.py  model_router.py  parallel_dispatcher.py  permissions.py  policy.py  reconcile.py  resilience.py  retrieval.py  scheduler.py  skills_runtime.py  subagent_profiles.py  system_prompt.py  task_runner.py  tavily.py  todo.py  tools.py  validate_pipeline.py  watchdog.py  worktree.py
codelite/hooks/: __init__.py  on_validation_fail.py  post_tool_use.py  pre_tool_use.py  runtime.py
codelite/memory/: __init__.py  ledger.py  policy.py  views.py
codelite/storage/: __init__.py  events.py  sessions.py  tasks.py
codelite/tui/: __init__.py  shell.py
docs/acceptance/: README.md
docs/exec-plans/: PLAN_TEMPLATE.md  README.md
docs/interview-site/: README.md  architecture.html  graph.html  index.html  interview.html  mechanisms.html  resume.html
docs/plans/: 2026-04-07-codelite-initial-plan.md  2026-04-09-tui-runtime-workbench-design.md
scripts/: critic_refine.py  generate_final_acceptance_bundle.py  lint_arch.py  manual_task_run_binding_demo.py  scaffold_acceptance_bundle.py  validate.py  verify_action.py
tests/core/: test_action_verify.py  test_v00_smoke.py  (+12 more)
(+78 files in other folders)
