[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codelite"
version = "0.2.0"
description = "CodeLite CLI runtime with v0.2 orchestration services"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CodeLite Team" }]
dependencies = ["PyYAML>=6.0"]

[project.scripts]
codelite = "codelite.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codelite*"]

[tool.setuptools.package-data]
codelite = ["config/*.yaml"]
